--- a/css/content.css
+++ b/css/content.css
@@ -1,5 +1,6 @@
+/*
 @import url("https://www.vzdn.com/_suma.css");
-
+*/
 
 body {
 	background: #e3fbe7 !important;
@@ -882,6 +883,96 @@ body {
 		color: #40b152;
 		font-size: 18px;
 		font-weight: bold;
+	}
+}
+
+
+
+
+
+
+
+.table2023 table,
+.table2023 th,
+.table2023 td {
+	border: 2px solid #e1e1e1 !important;
+}
+
+.table2023 td em {
+	display: inline-block;
+	font-style: normal !important;
+}
+.table2023 td strong {
+	font-weight: 700 !important;
+}
+.table2023 td u {
+	text-decoration: none !important;
+}
+
+.table2023 tr:nth-child(1) td,
+.table2023 tr:nth-child(2) td {
+	text-align: center;
+	font-weight: bold;
+	color: #40b152;
+	background: #e3fbe7;
+}
+
+.table2023 tr:nth-child(n + 3) td:nth-child(1) {
+	font-weight: 700;
+	background: #eee;
+}
+.table2023 tr:nth-child(n + 3) td:nth-child(n + 2) {
+	text-align: right;
+	font-weight: bold;
+	color: #40b152;
+}
+
+@media screen and (min-width: 770px) {
+	.table2023 tr:nth-child(1) td,
+	.table2023 tr:nth-child(2) td {
+		font-size: 21px;
+		line-height: 1.3;
+	}
+	
+	.table2023 td em {
+		font-size: 16px;
+	}
+
+	.table2023 tr:nth-child(n + 3) td:nth-child(1) {
+		text-align: center;
+	}
+	.table2023 tr:nth-child(n + 3) td:nth-child(n + 2) {
+		font-size: 20px;
+		letter-spacing: 1px;
+	}
+}
+
+
+@media screen and (max-width: 769px) {
+	.table2023 table,
+	.table2023 th,
+	.table2023 td {
+		border-width: 1px !important;
+	}
+
+	.table2023 td em {
+		font-size: 9px;
+	}
+
+	.table2023 td u,
+	.table2023 td strong {
+		white-space: nowrap;
+	}
+
+	.table2023 th,
+	.table2023 td {
+		padding: 4px !important;
+		font-size: 11px;
+		letter-spacing: 0;
+	}
+
+	.table2023 tr:nth-child(n + 3) td:nth-child(n + 2) {
+		font-size: 12px;
 	}
 }
 
