--- a/css/main.css
+++ b/css/main.css
@@ -665,7 +665,10 @@ body.type2021 .kv-sp {
 		/*
 		top: calc((550 * 100vw / 1480) - (160 * 100vw / 1480 * 2 + 40px));
 		*/
+		/*
 		top: calc( (100vw / 1920 * 950) - (160 * 100vw / 1480 * 2 + 20px) - 25px );
+		*/
+		top: calc( (100vw / 1920 * 950) - (160 * 100vw / 1480 * 2 + 20px) - 45px );
 		z-index: 500;
 	}
 	#kv + .shortcut a {
