--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,7 @@ body.type2021 .kv-sp {
 		width: 100%;
 		height: auto;
 	}
-
+	
 	#head2021 h1:has(.logo-2026) {
 		width: 289px;
 		height: 48px;
@@ -107,7 +107,6 @@ body.type2021 .kv-sp {
 	#head2021 h1:has(.logo-2026) a {
 		height: 48px;
 	}
-	
 	
 	#head2021 .global {
 		position: absolute;
@@ -243,6 +242,9 @@ body.type2021 .kv-sp {
 	#foot2021 .logo img {
 		width: 300px;
 		height: auto;
+	}
+	#foot2021 .logo img.logo-2026 {
+		width: 423px;
 	}
 	
 	#foot2021 .copyright {
@@ -779,7 +781,15 @@ body.type2021 .kv-sp {
 		width: 100%;
 		height: auto;
 	}
-	
+
+	#head2021 h1:has(.logo-2026) {
+		width: 205px;
+		height: 34px;
+	}
+
+	#head2021 h1:has(.logo-2026) a {
+		height: 34px;
+	}
 	
 	#head2021 .container1 {
 		position: relative;
@@ -947,6 +957,10 @@ body.type2021 .kv-sp {
 	#foot2021 .logo img {
 		width: 148px;
 		height: auto;
+	}
+
+	#foot2021 .logo img.logo-2026 {
+		width: 217px;
 	}
 	
 	#foot2021 .copyright {
