--- a/css/main.css
+++ b/css/main.css
@@ -245,6 +245,7 @@ body.type2021 .kv-sp {
 	}
 	#foot2021 .logo img.logo-2026 {
 		width: 423px;
+		filter: brightness(0) invert(1);
 	}
 	
 	#foot2021 .copyright {
@@ -961,6 +962,7 @@ body.type2021 .kv-sp {
 
 	#foot2021 .logo img.logo-2026 {
 		width: 217px;
+		filter: brightness(0) invert(1);
 	}
 	
 	#foot2021 .copyright {
